@@ -1,3 +1,8 @@
+TAG: annotload-6-0-8-?
+DATE: 10/31/2016
+STAFF: lec
+CHANGES: TR12427/Disease Ontology (DO)
+
 TAG: annotload-6-0-6-1
 DATE: 09/08/2016
 STAFF: lec
